# covo

./: .gitignore  README.md  pyproject.toml  requirements-train.txt  requirements-whisper.txt  requirements.txt
.github/workflows/: test.yml
configs/: baselines_chinesehp_test.json  deepseek_teacher_sample.json  evaluate_qwen_lora_test.json  prepare_chinesehp_full.json  qwen_lora_5090.json  sample_prepare_chinesehp.json  whisper_v3_decode.json
docs/: cbwhisper_correction_plan.md  evidence_schema.md  experiment_log.md  server_runbook.md  training_quickstart.md
examples/: chinesehp_aishell1_qwen_messages_sample.jsonl  chinesehp_aishell1_sft_sample.jsonl
scripts/: analyze_corrections.py  apply_edits_jsonl.py  build_manifest.py  dataset_stats.py  evaluate_baselines_jsonl.py  evaluate_correction_jsonl.py  export_sft_format.py  filter_sft_jsonl.py  generate_teacher_edits_deepseek.py  infer_lora_edits.py  parse_model_edits_jsonl.py  prepare_chinesehp_sft.py  rule_correct_jsonl.py  run_pipeline.py  split_jsonl.py  train_lora_sft.py  transcribe_whisper_v3.py  unpack_zip.py
src/covo/: __init__.py  archives.py  baselines.py  chinesehp.py  config.py  edits.py  formats.py  io.py  metrics.py  model_output.py  rule_corrector.py  text.py
tests/: test_archives.py  test_baselines.py  test_chinesehp.py  test_config.py  test_edits.py  test_formats.py  test_io_metrics_scripts.py  test_metrics.py  test_model_output.py  test_rule_corrector.py
