[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "covo"
version = "0.1.0"
description = "Constrained ASR correction utilities for Whisper-v3 and CB-Whisper experiments."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pypinyin>=0.50.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
